--- a/page02.html
+++ b/page02.html
@@ -2,19 +2,25 @@
 <head>
 <meta charset="utf-8">
 <!-- TemplateBeginEditable name="doctitle" -->
-<title>Story of Seasons: Friends of Mineral Town - Page 02</title>
+<title>STORY OF SEASONS: Friends of Mineral Town - Page 02</title>
 <!-- TemplateEndEditable -->
 <!-- TemplateBeginEditable name="head" -->
 <!-- TemplateEndEditable -->
 </head>
 
-<body bgcolor="#FFFFFF">
- 
- <center><img src="Images/sos_friends_banner.png" alt="" usemap="#Map" /></center>
-<map name="Map" id="Map">
-	<area alt="" title="" href="Page03.html" shape="rect" coords="1125,578,1279,716" />
-	<area alt="" title="" href="index.html" shape="rect" coords="0,566,151,719" />
- </map>
+<body bgcolor="#294333">
+
+
+<center><img src="images/sos_friends_banner.png." usemap="#image-map"></center>
+
+<map name="image-map">
+    <area target="_self" alt="" title="" href="index.html" coords="111,719,33,647" shape="rect">
+    <area target="_self" alt="" title="" href="page02.html" coords="245,718,113,647" shape="rect">
+    <area target="_self" alt="" title="" href="page03.html" coords="249,643,403,719" shape="rect">
+    <area target="_self" alt="" title="" href="page04.html" coords="404,644,517,719" shape="rect">
+    <area target="_self" alt="" title="" href="page05.html" coords="518,644,613,719" shape="rect">
+</map>
+
  
 </body>
 </html>
